@@ -216,16 +216,6 @@ test suite.
 
 It does not work with L<Mouse>. Pull requests are welcome.
 
-=head1 SUPPORT FOR OLDER PERL VERSIONS
-
-Since v0.6.0, the this module requires Perl v5.14 or later.
-
-Future releases may only support Perl versions released in the last ten years.
-
-If you need this module on Perl v5.10, please use one of the v0.5.x
-versions of this module.  Significant bug or security fixes may be
-backported to those versions.
-
 =head1 SEE ALSO
 
 <MooX::Readonly::Attribute>, which has similar functionality to this module.
